; ModuleID = '/home/carl/AnghaBench/freebsd/sys/geom/part/extr_g_part.c_g_part_parm_bootcode.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/geom/part/extr_g_part.c_g_part_parm_bootcode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gctl_req = type { i32 }

@ENOATTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gctl_req*, i8*, i8**, i32*)* @g_part_parm_bootcode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @g_part_parm_bootcode(%struct.gctl_req* %0, i8* %1, i8** %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.gctl_req*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store %struct.gctl_req* %0, %struct.gctl_req** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8** %2, i8*** %8, align 8
  store i32* %3, i32** %9, align 8
  %12 = load %struct.gctl_req*, %struct.gctl_req** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call i8* @gctl_get_param(%struct.gctl_req* %12, i8* %13, i32* %11)
  store i8* %14, i8** %10, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i32, i32* @ENOATTR, align 4
  store i32 %18, i32* %5, align 4
  br label %24

19:                                               ; preds = %4
  %20 = load i8*, i8** %10, align 8
  %21 = load i8**, i8*** %8, align 8
  store i8* %20, i8** %21, align 8
  %22 = load i32, i32* %11, align 4
  %23 = load i32*, i32** %9, align 8
  store i32 %22, i32* %23, align 4
  store i32 0, i32* %5, align 4
  br label %24

24:                                               ; preds = %19, %17
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i8* @gctl_get_param(%struct.gctl_req*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
